# lnos

./: .gitignore  CMakeLists.txt  README.md  fixes.md
agent/: ip.cpp  main.cpp  main.h
liblnos/include/lnos/: config.h  crypto.h  ip.h  known_node.h  protocol.h
liblnos/src/: config.cpp  crypto.cpp  ip.cpp  nss_lnos.cpp  protocol.cpp
lnosctl/src/: main.cpp
lnosd/include/: registry.h
lnosd/src/: main.cpp  registry.cpp
po/: messages.pot  ru.po
server/: main.cpp  main.h
shared/: protocol.h
tests/: test_lnos.cpp
